Adding single list data structure.

--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
 
   <!-- Javascript files for the library -->
   <script src="../lib/node.js"></script>
+  <script src="../lib/list.js"></script>
   <script src="../lib/error/generic.js"></script>
 
   <!-- Initialize Mocha -->
@@ -22,6 +23,7 @@
 
   <!-- Tests -->
   <script src="../test/test.node.js"></script>
+  <script src="../test/test.list.js"></script>
 
   <script>
     mocha.checkLeaks();
